Added samshit and stuff, boy I hate this project

--- a/Samshit.html
+++ b/Samshit.html
@@ -9,12 +9,12 @@
 <body layout="column" layout-align="center center">
 <div flex="20">
     <h2 align="center">The phone for you is:</h2>
-    <h1 align="center" class="nexus">Nexus</h1>
+    <h1 align="center" class="nexus">Galaxy S6</h1>
 </div>
 <div flex="80">
-    <a href="https://www.google.com/nexus/">
+    <a href="http://www.samsung.com">
         <h2 align="center">Get It Here</h2>
-        <img class="image" src="https://www.google.com/nexus/images/landing/nexus-home-hero-1900.jpg">
+        <img class="image" src="https://cdn0.vox-cdn.com/thumbor/HcphDUZMigK4sYSQib9tmnFe_Hg=/0x0:930x620/1280x854/cdn0.vox-cdn.com/uploads/chorus_image/image/48681355/s7angle-930x621.0.0.png">
     </a>
 </div>
 <script src="bower_components/angular/angular.min.js"></script>
